# splinter

./: CMakeLists.txt  README.md
python/splinterpy11/: CMakeLists.txt  dev_splinterpy11.py  splinterpy11.cpp
